# sylph-web-gut

./: .gitignore  LICENSE  README.md
.github/workflows/: pages.yml
docs/: syldb_size_estimate.md
scripts/: README.md  build_gut_db.sh  dl_prjeb83730.sh  gen_test_fastq.py  test_downsample.mjs  test_wasm_profile.mjs
sylph-survey/: REPORT.md
sylph-wasm/: Cargo.toml
sylph-wasm/src/: cmdline.rs  contain.rs  inspect.rs  lib.rs  par.rs  sketch.rs  wasm.rs
web/: app.js  fastq-trim.js  index.html  multi.html  multi.js  profile.html  profile.js  styles.css  sylph-worker-rpc.js  sylph-worker.js  theme.js
web/db/: lineage.json  prjeb83730.manifest.json
web/sylph-pkg/: .gitignore  package.json  sylph_wasm.d.ts  sylph_wasm.js  sylph_wasm_bg.wasm  sylph_wasm_bg.wasm.d.ts
